--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hover-squares",
+  "homepage": "https://yaroslavyarynych.github.io/hover-squares",
   "private": true,
   "version": "0.0.0",
   "type": "module",
